--- a/symium.cabal
+++ b/symium.cabal
@@ -13,7 +13,6 @@ author:         Author name here
 maintainer:     example@example.com
 copyright:      2021 Author name here
 license:        BSD3
-license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
@@ -25,7 +24,8 @@ source-repository head
 
 library
   exposed-modules:
-      AlgebraExpression
+      AlgebraicExpression
+      Simplifier
   other-modules:
       Paths_symium
   hs-source-dirs:
