--- a/symium.cabal
+++ b/symium.cabal
@@ -25,6 +25,7 @@ source-repository head
 library
   exposed-modules:
       AlgebraicExpression
+      Operations
       Simplifier
   other-modules:
       Paths_symium
