--- a/package.yaml
+++ b/package.yaml
@@ -1,14 +1,13 @@
 name:                symium
 version:             0.1.0.0
-github:              "githubuser/symium"
+github:              "albertprz/symium"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
+author:              "Alberto Perez Lopez"
+maintainer:          "albertoperez1994@gmail.com"
 copyright:           "2021 Author name here"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,10 +16,12 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/symium#readme>
+description:         Please see the README on GitHub at <https://github.com/albertprz/symium#readme>
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
+- bookhound
 
 library:
   source-dirs: src
@@ -29,17 +30,6 @@ executables:
   symium-exe:
     main:                Main.hs
     source-dirs:         app
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - symium
-
-tests:
-  symium-test:
-    main:                Spec.hs
-    source-dirs:         test
     ghc-options:
     - -threaded
     - -rtsopts
