--- a/symium.cabal
+++ b/symium.cabal
@@ -6,33 +6,39 @@ cabal-version: 1.12
 
 name:           symium
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/symium#readme>
-homepage:       https://github.com/githubuser/symium#readme
-bug-reports:    https://github.com/githubuser/symium/issues
-author:         Author name here
-maintainer:     example@example.com
+description:    Please see the README on GitHub at <https://github.com/albertprz/symium#readme>
+homepage:       https://github.com/albertprz/symium#readme
+bug-reports:    https://github.com/albertprz/symium/issues
+author:         Alberto Perez Lopez
+maintainer:     albertoperez1994@gmail.com
 copyright:      2021 Author name here
 license:        BSD3
 build-type:     Simple
 extra-source-files:
     README.md
-    ChangeLog.md
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/symium
+  location: https://github.com/albertprz/symium
 
 library
   exposed-modules:
-      AlgebraicExpression
-      Operations
-      Simplifier
+      AlgebraicExpression.Differentiator
+      AlgebraicExpression.Evaluator
+      AlgebraicExpression.Operations
+      AlgebraicExpression.Parser
+      AlgebraicExpression.Printer
+      AlgebraicExpression.Simplifier
+      AlgebraicExpression.Sorter
+      AlgebraicExpression.SyntaxTree
   other-modules:
       Paths_symium
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , bookhound
+    , containers
   default-language: Haskell2010
 
 executable symium-exe
@@ -44,18 +50,7 @@ executable symium-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , symium
-  default-language: Haskell2010
-
-test-suite symium-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_symium
-  hs-source-dirs:
-      test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
+    , bookhound
+    , containers
     , symium
   default-language: Haskell2010
