--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,46 @@ description:         Please see the README on GitHub at <https://github.com/albe
 dependencies:
 - base >= 4.7 && < 5
 - containers
-- bookhound
+- bookhound >= 0.1.2 && < 0.2
+
+ghc-options:
+- -Wall
+- -Wcompat
+- -Wincomplete-record-updates
+- -Wincomplete-uni-patterns
+- -Wredundant-constraints
+
+default-extensions:
+- LambdaCase
+- EmptyCase
+- EmptyDataDecls
+- MultiWayIf
+- ApplicativeDo
+- TupleSections
+- NamedFieldPuns
+- PostfixOperators
+
+- BangPatterns
+- PatternSynonyms
+
+- FlexibleContexts
+- FlexibleInstances
+- MultiParamTypeClasses
+
+- GADTs
+- TypeFamilies
+- FunctionalDependencies
+- TypeFamilyDependencies
+- TypeApplications
+- ScopedTypeVariables
+- DataKinds
+- PolyKinds
+
+- DeriveFunctor
+- DeriveFoldable
+- DeriveTraversable
+- DeriveGeneric
+- GeneralizedNewtypeDeriving
 
 library:
   source-dirs: src
