--- a/symium.cabal
+++ b/symium.cabal
@@ -35,9 +35,37 @@ library
       Paths_symium
   hs-source-dirs:
       src
+  default-extensions:
+      LambdaCase
+      EmptyCase
+      EmptyDataDecls
+      MultiWayIf
+      ApplicativeDo
+      TupleSections
+      NamedFieldPuns
+      PostfixOperators
+      BangPatterns
+      PatternSynonyms
+      FlexibleContexts
+      FlexibleInstances
+      MultiParamTypeClasses
+      GADTs
+      TypeFamilies
+      FunctionalDependencies
+      TypeFamilyDependencies
+      TypeApplications
+      ScopedTypeVariables
+      DataKinds
+      PolyKinds
+      DeriveFunctor
+      DeriveFoldable
+      DeriveTraversable
+      DeriveGeneric
+      GeneralizedNewtypeDeriving
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-    , bookhound
+    , bookhound >=0.1.2 && <0.2
     , containers
   default-language: Haskell2010
 
@@ -47,10 +75,37 @@ executable symium-exe
       Paths_symium
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:
+      LambdaCase
+      EmptyCase
+      EmptyDataDecls
+      MultiWayIf
+      ApplicativeDo
+      TupleSections
+      NamedFieldPuns
+      PostfixOperators
+      BangPatterns
+      PatternSynonyms
+      FlexibleContexts
+      FlexibleInstances
+      MultiParamTypeClasses
+      GADTs
+      TypeFamilies
+      FunctionalDependencies
+      TypeFamilyDependencies
+      TypeApplications
+      ScopedTypeVariables
+      DataKinds
+      PolyKinds
+      DeriveFunctor
+      DeriveFoldable
+      DeriveTraversable
+      DeriveGeneric
+      GeneralizedNewtypeDeriving
+  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , bookhound
+    , bookhound >=0.1.2 && <0.2
     , containers
     , symium
   default-language: Haskell2010
