Refactored Command Line program

--- a/symium.cabal
+++ b/symium.cabal
@@ -72,6 +72,10 @@ library
 executable symium-exe
   main-is: Main.hs
   other-modules:
+      CommandLine.Command
+      CommandLine.Helpers
+      CommandLine.Message
+      CommandLine.Parsers
       Paths_symium
   hs-source-dirs:
       app
